Temporary fix gallery lightbox shifting page to right

--- a/styles/sass/partials/_fixes.scss
+++ b/styles/sass/partials/_fixes.scss
@@ -34,3 +34,9 @@
 .mfp-counter {
 	white-space: nowrap;
 }
+
+/* Temporary fix for lightbox shifting page to right when opened */
+html {
+	padding-right: 0 !important;
+	overflow: auto !important;
+}
